feat(skills): publish the 244-skill catalogue
Brings the whole skill set under version control and regenerates the registry
index for it. Most of these packages existed in the working tree but had never
been committed, so the index at HEAD described 21 of them.

Included in this commit, beyond tracking what already existed:

Four new skills close the gaps a coverage review found unowned:

- sql-query-performance — reading an execution plan, selectivity, composite
  index column order, covering, and the predicates that disable an index
- orm-fetch-and-batching-performance — statement count as the primary number,
  the four N+1 mechanisms, and why identity id generation disables batching
- jdk-upgrade-impact — the five classes of upgrade breakage, the compatibility
  pass, and what to measure against which baseline
- incident-evidence-capture — what to collect before a restart, in what order,
  and what the restart destroys

Corrections to claims that a real JDK contradicts, each executed on Temurin 11,
17, 18, 19, 20, 21, 24 and 25 rather than reasoned about:

- G1EagerReclaimHumongousObjects was experimental and was removed in JDK 20;
  it was documented as an ordinary tuning flag with a default
- G1SummarizeRSetStats and ShenandoahMaxSATBBufferSize do not exist on any
  supported release; the JVM names the surviving flag in its own error
- PrintSafepointStatistics warns on 11 and is unrecognised from 17
- PrintEscapeAnalysis and PrintEliminateAllocations are develop flags, so the
  documented command could not run on any shipping build

Every SKILL.md description now equals its manifest description. Only the
manifest one ships — adapters project it and the index carries it — so a
divergent frontmatter description was text no agent could read, including the
trigger and boundary clauses several skills had only there.

Four dependency ranges pinned architecture-decision-making at ^1.0.0 after it
moved to 2.0.0, which made domain-logic-organization,
enterprise-applicat